# vst3-mcp

./: .gitignore  Cargo.toml  README.md  neuro_bass.vstpreset  roadmap.md  tipper_squelch_vox.vstpreset
.claude/: gsd-file-manifest.json  settings.local.json
.gemini/: gsd-file-manifest.json
.github/workflows/: rust.yml
.opencode/: gsd-file-manifest.json  opencode.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/archive-vst3-mcp-host/research/: ARCHITECTURE.md
.planning/debug/resolved/: vst-parameter-and-window-issues.md
.planning/phases/01-plugin-hosting/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/01-single-plugin-mvp/: 01-01-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-audio-processing/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-parameter-control/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-mcp-server-tools/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-VERIFICATION.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/04.1-host-plugin-editor-window/: 04.1-01-PLAN.md  04.1-01-SUMMARY.md  04.1-02-PLAN.md  04.1-RESEARCH.md
.planning/phases/05-focus-mode/: 05-01-PLAN.md  05-RESEARCH.md
.planning/phases/07-replace-the-ui-library-used-by-the-vst-wrapper-with-the-modern-standard-for-cross-platform-vst3-development/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  architecture.md  pitfalls.md
crates/agentaudio-mcp-router/: Cargo.toml
crates/agentaudio-mcp-router/evals/: audio_routing_first_tool.json
crates/agentaudio-mcp-router/src/: main.rs
crates/agentaudio-wrapper-vst3/: Cargo.toml  README.md
crates/agentaudio-wrapper-vst3/src/: controller.rs  lib.rs  param_scoring.rs
docs/: API.md  CNAME  EXAMPLES.md  UI.md  USAGE.md  index.html
docs/plugins/: FabFilter_Pro-C.md  README.md  Serum.md  Vital.md
docs/sound-design/: README.md  bass_foundation.md  effects_and_risers.md  elodic_and_harmonic.md  granular_synthesis.md  mastering_chain.md  mixing_bass.md  mixing_drums.md  percussion_and_drums.md  physical_modeling.md  reese-bass.md  textures_and_drones.md  vocal-compression.md
scripts/: build-and-install-vst3.sh  bundle-vst3.sh  master-release-installer.sh
src/: doc_search.rs  lib.rs  main.rs  server.rs
src/audio/: buffers.rs  decode.rs  encode.rs  mod.rs  process.rs
src/gui/: app.rs  mod.rs  plugframe.rs  runloop.rs  window.rs  xembed.rs
src/hosting/: event_list.rs  host_app.rs  mod.rs  module.rs  param_changes.rs  plugin.rs  scanner.rs  types.rs
src/preset/: mod.rs  state.rs  vstpreset.rs
tests/: audio_processing.rs  parameter_control.rs
(+3 files in other folders)
