[package]
name = "vst3-mcp-host"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
hound = "3.5.1"
libloading = "0.9.0"
rmcp = { version = "0.15.0", features = ["server", "transport-io", "macros"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
symphonia = { version = "0.5.5", features = ["all"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
vst3 = "0.3.0"
