[package]
name = "agentaudio-mcp-router"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "agentaudio-mcp-routerd"
path = "src/main.rs"

[dependencies]
axum = "0.8"
rmcp = { version = "0.15.0", features = ["client", "server", "macros", "transport-streamable-http-server", "transport-streamable-http-client-reqwest"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

